--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,1 @@
-2018-02-09  FieryCod  <kwojcik4@fierycod>
-* Add initial .spacemacs file
+* Add support for python & delete unnecessary logic & create better defaults Thu Mar 15 22:28:08 2018
